# homebase-gcal-integration

./: .dockerignore  .env.example  .gcloudignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  security.yml  test.yml  tf-plan.yml
infra/: artifact_registry.tf  cloud_run_job.tf  cloud_scheduler.tf  github_oidc.tf  main.tf  outputs.tf  service_accounts.tf  variables.tf
scripts/: bootstrap_oauth.py  cleanup_legacy_events.py  smoke_scrape.py  smoke_sync.py
src/homebase_sync/: __init__.py  __main__.py  calendar_sync.py  config.py  models.py  parser.py  scraper.py  time_utils.py
tests/: test_calendar_sync.py  test_parser.py  test_scraper_dates.py
tests/fixtures/: sample_row.html
